src/objects/vlocity_ins__InsuranceClaimInvolvedProperty__c.object
<CustomObject>
    <description>Document property damages (i.e. vehicle, building, household items etc.) and location of the incident as well as parties involved with a claim. Master-detail child object of Claim.</description>
    <fields>
        <fullName>vlocity_ins__AdjustedAmount__c</fullName>
        <description>DEPRECATED</description>
        <label>Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AllocatedReserveAmount__c</fullName>
        <description>DEPRECATED</description>
        <label>Allocated Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetInsuredItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insured Item</label>
        <referenceTo>vlocity_ins__AssetInsuredItem__c</referenceTo>
        <relationshipLabel>Involved Properties</relationshipLabel>
        <relationshipName>InvolvedProperties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Involved Properties</relationshipLabel>
        <relationshipName>Involved_Properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimantId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claimant Id</label>
        <referenceTo>vlocity_ins__InsuranceClaimPartyRelationship__c</referenceTo>
        <relationshipLabel>Involved Properties</relationshipLabel>
        <relationshipName>Involved_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimantParty__c</fullName>
        <formula>vlocity_ins__ClaimantId__r.vlocity_ins__Party__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CurrentLocation__c</fullName>
        <formula>IF( ISBLANK(vlocity_ins__StreetAddress__c),&quot;&quot;, vlocity_ins__StreetAddress__c &amp; &quot;, &quot;) &amp;
IF( ISBLANK(vlocity_ins__City__c), &quot;&quot;, vlocity_ins__City__c &amp; &quot;, &quot;) &amp;
IF( ISBLANK(vlocity_ins__State__c),&quot;&quot;, vlocity_ins__State__c &amp; &quot; &quot;) &amp;
IF( ISBLANK(vlocity_ins__PostalCode__c), &quot;&quot;, vlocity_ins__PostalCode__c &amp; &quot;, &quot;) &amp;
vlocity_ins__Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DescriptionOfCondition__c</fullName>
        <label>Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DescriptionOfDamages__c</fullName>
        <label>Damages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsDriveable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driveable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LocationType__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Body Shop</fullName>
                </value>
                <value>
                    <fullName>Incident Location</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Policyholder Home</fullName>
                </value>
                <value>
                    <fullName>Repair Shop</fullName>
                </value>
                <value>
                    <fullName>Salvage Yard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalTotalReserveAmount__c</fullName>
        <description>DEPRECATED</description>
        <label>Original Total Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PaidAmount__c</fullName>
        <description>DEPRECATED</description>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Involved Properties</relationshipLabel>
        <relationshipName>Involved_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PropertyType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Business Leased</fullName>
                </value>
                <value>
                    <fullName>Business Owned</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Commercial Garage</fullName>
                </value>
                <value>
                    <fullName>Commercial Office</fullName>
                </value>
                <value>
                    <fullName>Commercial Storefront</fullName>
                </value>
                <value>
                    <fullName>Commercial Warehouse</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>Houseboat</fullName>
                </value>
                <value>
                    <fullName>Multi Family Home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbuilding</fullName>
                </value>
                <value>
                    <fullName>Scheduled Personal Property</fullName>
                </value>
                <value>
                    <fullName>Single Family Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RemainingReserveAmount__c</fullName>
        <description>DEPRECATED</description>
        <formula>MAX(vlocity_ins__TotalReserveAmount__c, vlocity_ins__AllocatedReserveAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RepairPreference__c</fullName>
        <label>Repair Preference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SeverityOfDamages__c</fullName>
        <label>Damage Severity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecProduct2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Involved Properties</relationshipLabel>
        <relationshipName>InvolvedProperty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StreetAddress__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalReserveAmount__c</fullName>
        <description>DEPRECATED</description>
        <label>Total Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalReserveStatus__c</fullName>
        <description>DEPRECATED</description>
        <label>Total Reserve Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>ApprovedRollup</fullName>
                </value>
                <value>
                    <fullName>Reverted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnallocatedReserveAmount__c</fullName>
        <description>DEPRECATED</description>
        <formula>MAX((vlocity_ins__TotalReserveAmount__c - vlocity_ins__AllocatedReserveAmount__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unallocated Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Involved Property</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Involved Properties</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__Property</fullName>
        <active>true</active>
        <label>Property</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Vehicle</fullName>
        <active>true</active>
        <label>Vehicle</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>